--- a/site/_config.yml
+++ b/site/_config.yml
@@ -5,8 +5,8 @@ description: Some musing
 
 ### Built settings ###
 
-url: "https://chriszingel.github.io"
-baseurl: "/zingtech"
+url: "https://wwww.zingtech.nz"
+baseurl: "/"
 
 github_username: chrisZingel
 
